# eval-gmock

./: CMakeLists.txt  README.md  configure
gtest/: CMakeLists.txt.in
src/: CMakeLists.txt  foo.cpp  foo.hpp  main.cpp
test/: CMakeLists.txt  foo.spec.cpp
